fixing nav links

--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ nav {
     position: absolute;
     height: 100%;
     width: 100%;
-    background-color:#4c4f65;;
+    background-color:#4c4f65;
     left: 0;
     bottom: -100%;
     border-radius: 50%;
