--- a/style.css
+++ b/style.css
@@ -650,16 +650,16 @@ nav h3 {
 
 .gridCell h2 {
     font-weight: 900;
-    font-size: 16.45px;
+    font-size: 16.42px;
     text-align: center;
-    margin-top: 0.37rem;
+    margin-top: 0.32rem;
 }
 
 .div4-content {
     display: flex;
     justify-content: space-between;
     flex-grow: 1;
-    margin-top: 1.4rem;
+    margin-top: 1.6rem; 
 }
 
 .div4 ul {
@@ -676,8 +676,8 @@ nav h3 {
     content: '\2022'; 
     color: #4c4f65; 
     display: inline-block;
-    width: 1em; 
-    margin-left: 1.81em; 
+    width: 2.2em; 
+    margin-left: 1.96em; 
 }
 
 #div4-left, #div4-right {
@@ -707,7 +707,7 @@ nav h3 {
     color: #4c4f65; 
     display: inline-block;
     width: 1em; 
-    margin-left: 1.81em; 
+    margin-left: 1.96em; 
 }
 
 #div5-left, #div5-right {
@@ -715,12 +715,16 @@ nav h3 {
     box-sizing: border-box;
 }
 
+#div5-right {
+    justify-content: center;
+}
+
 .div5 ul li::before {
     content: '\2022'; 
     color: #4c4f65; 
     display: inline-block;
-    width: 1em; 
-    margin-left: 1.81em; 
+    width: 2.2em; 
+    margin-left: 1.96em; 
 }
 
 .div5 h2 {
@@ -749,8 +753,8 @@ nav h3 {
     content: '\2022'; 
     color: #4c4f65; 
     display: inline-block;
-    width: 1em; 
-    margin-left: 1.81em; 
+    width: 2.2em; 
+    margin-left: 1.96em; 
 }
 
 .div7-content {
@@ -774,21 +778,21 @@ nav h3 {
     content: '\2022'; 
     color: #4c4f65; 
     display: inline-block;
-    width: 1em; 
-    margin-left: 1.81em; 
+    width: 2.2em; 
+    margin-left: 1.96em; 
 }
 
 .div4 { grid-area: 2 / 1 / 4 / 3; 
     display: flex;
     justify-content: space-between;
     padding: 12px;
-    height: 100%;
+    height: 178px;
 }
 .div5 { grid-area: 4 / 2 / 5 / 4;
     display: flex;
     justify-content: space-between;
     padding: 12px;
-    height: 167px; 
+    height: 178px; 
 }
 .div6 { grid-area: 4 / 1 / 5 / 2;
     display: flex;
