--- a/style.css
+++ b/style.css
@@ -216,68 +216,133 @@ nav h3 {
 
 #hero-shape {
     position: absolute;
-    width: 45.57vw;
-    height: 34.57vw;
+    width: 70vw;
+    height: 42vw;
     right: 0;
-    top: 67.4vh;
+    top: 45vh;
+    margin-top: 15rem;
 }
 
 #hero-1 {
-    background-color: #FE320A;
+    background-color: #FF5733;
     height: 100%;
     width: 100%;
-    border-top-left-radius: 50%;
-    border-bottom-left-radius: 50%;
-    filter: blur(2.2vw);
+    border-radius: 80%;
+    filter: blur(8vw);
     position: absolute;
+    animation-name: anime1;
+    animation-duration: 10s;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
 }
 
 #hero-2 {
-    background: linear-gradient(#FE320A, #fe3f0a);
+    background: linear-gradient(#FF5733, #FF6F33);
     height: 30vw;
     width: 30vw;
     border-radius: 50%;
     position: absolute;
     animation-name: anime2;
-    animation-duration: 5s;
-    animation-timing-function: linear;
+    animation-duration: 12s;
+    animation-timing-function: ease-in-out;
     animation-iteration-count: infinite;
-    animation-direction: alternate;
-    filter: blur(81px);
+    animation-direction: alternate-reverse;
+    filter: blur(140px);
 }
 
 #hero-3 {
-    background: linear-gradient(#FE320A, #fe3f0a);
-    height: 30vw;
+    background: linear-gradient(#FF5733, #FF6F33);
+    height: 25vw;
     position: absolute;
-    width: 30vw;
-    border-radius: 50%;
-    filter: blur(81px);
-    animation-name: anime1;
-    animation-duration: 5s;
-    animation-timing-function: linear;
+    width: 25vw;
+    border-radius: 60%;
+    filter: blur(140px);
+    animation-name: anime3;
+    animation-duration: 11s;
+    animation-timing-function: ease-in-out;
     animation-iteration-count: infinite;
     animation-direction: alternate;
     z-index: -1;
 }
 
+#hero-4 {
+    background: linear-gradient(#FF5733, #FF6F33);
+    height: 35vw;
+    width: 35vw;
+    border-radius: 70%;
+    position: absolute;
+    animation-name: anime4;
+    animation-duration: 13s;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
+    animation-direction: alternate-reverse;
+    filter: blur(160px);
+    z-index: -2;
+}
+
+#hero-5 {
+    background: linear-gradient(#FF5733, #FF6F33);
+    height: 20vw;
+    position: absolute;
+    width: 20vw;
+    border-radius: 40%;
+    filter: blur(160px);
+    animation-name: anime5;
+    animation-duration: 14s;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    z-index: -3;
+}
+
 @keyframes anime1 {
     from {
-        transform: translate(55%, -11%);
+        transform: translate(50%, -30%) rotate(0deg);
     }
 
     to {
-        transform: translate(0%, 29%);
+        transform: translate(-30%, 50%) rotate(360deg);
     }
 }
 
 @keyframes anime2 {
     from {
-        transform: translate(11%, -11%);
+        transform: translate(30%, -40%) rotate(0deg);
     }
 
     to {
-        transform: translate(-24%, 34%);
+        transform: translate(-50%, 30%) rotate(-360deg);
+    }
+}
+
+@keyframes anime3 {
+    from {
+        transform: translate(20%, -20%) rotate(0deg);
+    }
+
+    to {
+        transform: translate(-20%, 40%) rotate(360deg);
+    }
+}
+
+@keyframes anime4 {
+    from {
+        transform: translate(10%, -30%) rotate(0deg);
+    }
+
+    to {
+        transform: translate(-30%, 20%) rotate(-360deg);
+    }
+}
+
+@keyframes anime5 {
+    from {
+        transform: translate(40%, -10%) rotate(0deg);
+    }
+
+    to {
+        transform: translate(-10%, 30%) rotate(360deg);
     }
 }
 
@@ -370,35 +435,6 @@ nav h3 {
     margin-top: 2vw;
     font-size: 0.97vw;
     justify-content:left;
-}
-
-#page2 #gooey {
-    height: 29vw;
-    width: 29vw;
-    position: absolute;
-    border-radius: 50%;
-    background: linear-gradient(to top right, #ff2d03, #ff5c0b);
-    top: 58%;
-    left: 25%;
-    filter: blur(32px);
-    animation-name: gooey;
-    animation-duration: 6s;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-    animation-timing-function: ease-in-out;
-    margin-top: 8.29rem;
-}
-
-@keyframes gooey {
-    from {
-        filter: blur(32px);
-        transform: translate(22%, -22%) skew(0);
-    }
-
-    to {
-        filter: blur(44px);
-        transform: translate(-22%, 22%) skew(-12deg);
-    }
 }
 
 #page3 {
