--- a/style.css
+++ b/style.css
@@ -28,6 +28,19 @@ html, body {
     scroll-behavior: smooth;
 }
 
+#loader {
+    height: 100%;
+    width: 100%;
+    background-color: #000;
+    position: fixed;
+    z-index: 999;
+    top: -100%;
+    transition: all ease 0.7s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 #main {
     position: relative;
     z-index: 10;
