changed the styling of skills section completely.

--- a/style.css
+++ b/style.css
@@ -675,185 +675,40 @@ nav h3 {
     color: #4c4f65;
 }
 
-.grid {
+.container {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(4, 1fr);
-    grid-column-gap: 15px;
-    grid-row-gap: 15px;
-    height: 434px;
-    width: 581px;
-    margin: -6.92rem auto;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    padding: 20px;
+    max-width: 800px;
+    margin: auto;
 }
 
-.gridCell {
-    background-color: #EFEAE3;
-    border: 1px solid #4c4f65;
+.box {
+    background-color: #4c0f03;
     border-radius: 11px;
-    position: relative;
-    overflow: hidden;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.22);
+    padding: 22px;
+}
+
+.box h3 {
+    margin-bottom: 24.8px;
+    font-size: 1.11em;
+    color: #EFEAE3;
+}
+
+.skillstags {
     display: flex;
-    flex-direction: column;
-    padding: 12px;
+    flex-wrap: wrap;
+    gap: 11px;
 }
 
-.gridCell h2 {
-    font-weight: 900;
-    font-size: 16.42px;
-    text-align: center;
-    margin-top: 0.32rem;
-}
-
-.div4-content {
-    display: flex;
-    justify-content: space-between;
-    flex-grow: 1;
-    margin-top: 1.6rem; 
-}
-
-.div4 ul {
-    list-style-type: none; 
-    padding: 0; 
-    margin: 0; 
-}
-
-.div4 ul li {
-    padding: 4.45px 0;
-}
-
-.div4 ul li::before {
-    content: '\2022'; 
-    color: #4c4f65; 
-    display: inline-block;
-    width: 2.2em; 
-    margin-left: 1.96em; 
-}
-
-#div4-left, #div4-right {
-    width: 48%;
-    box-sizing: border-box;
-}
-
-.div5-content {
-    display: flex;
-    justify-content: space-between;
-    flex-grow: 1;
-    margin-top: 1.01rem; 
-}
-
-.div5 ul {
-    list-style-type: none; 
-    padding: 0; 
-    margin: 0; 
-}
-
-.div5 ul li {
-    padding: 4.45px 0;
-}
-
-.div5 ul li::before {
-    content: '\2022'; 
-    color: #4c4f65; 
-    display: inline-block;
-    width: 1em; 
-    margin-left: 1.96em; 
-}
-
-#div5-left, #div5-right {
-    width: 48%;
-    box-sizing: border-box;
-}
-
-#div5-right {
-    justify-content: center;
-}
-
-.div5 ul li::before {
-    content: '\2022'; 
-    color: #4c4f65; 
-    display: inline-block;
-    width: 2.2em; 
-    margin-left: 1.96em; 
-}
-
-.div5 h2 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.div6-content {
-    display: flex;
-    justify-content: space-between;
-    flex-grow: 1;
-    margin-top: 1.4rem;
-}
-
-.div6 ul {
-    list-style-type: none; 
-    padding: 0; 
-    margin: 0; 
-}
-
-.div6 ul li {
-    padding: 4.45px 0;
-}
-
-.div6 ul li::before {
-    content: '\2022'; 
-    color: #4c4f65; 
-    display: inline-block;
-    width: 2.2em; 
-    margin-left: 1.96em; 
-}
-
-.div7-content {
-    display: flex;
-    justify-content: space-between;
-    flex-grow: 1;
-    margin-top: 1.4rem;
-}
-
-.div7 ul {
-    list-style-type: none; 
-    padding: 0; 
-    margin: 0; 
-}
-
-.div7 ul li {
-    padding: 4.45px 0;
-}
-
-.div7 ul li::before {
-    content: '\2022'; 
-    color: #4c4f65; 
-    display: inline-block;
-    width: 2.2em; 
-    margin-left: 1.96em; 
-}
-
-.div4 { grid-area: 2 / 1 / 4 / 3; 
-    display: flex;
-    justify-content: space-between;
-    padding: 12px;
-    height: 178px;
-}
-.div5 { grid-area: 4 / 2 / 5 / 4;
-    display: flex;
-    justify-content: space-between;
-    padding: 12px;
-    height: 178px; 
-}
-.div6 { grid-area: 4 / 1 / 5 / 2;
-    display: flex;
-    justify-content: space-between;
-    padding: 12px;
-    height: 100%;
-}
-.div7 { grid-area: 2 / 3 / 4 / 4;
-    display: flex;
-    justify-content: space-between;
-    padding: 12px;
-    height: 100%;
+.skillstag {
+    background-color: #EFEAE3;
+    border-radius: 16px;
+    padding: 5px 10px;
+    font-size: 0.81em;
+    color: #4c4f65;
 }
 
 #footer {
@@ -958,7 +813,7 @@ nav h3 {
     font-size: larger;
 }
 
-#full-scr {
+/*#full-scr {
     height: 100vh;
     width: 100%;
     background-color: #17181e;
@@ -974,7 +829,7 @@ nav h3 {
     background-color: #EFEAE3;
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
-}
+}*/
 
 @media (max-width:600px) {
 
